--- a/style.css
+++ b/style.css
@@ -34,11 +34,23 @@ main img {
   width: 100px;
 }
 
+#host-image {
+  width: 100%;
+}
+
+.ideas img {
+  width: 100%;
+}
+
+#about img {
+  width: 100%;
+}
+
 /* ---  Groups & Items --- */
 
 .group {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
 }
 
 .item {
@@ -51,17 +63,25 @@ main img {
 }
 
 /* -------  Navigation ------- */
-
 header {
   background-color: #ff385c;
-  padding: 20px 20px 0 20px;
+  padding: 20px 10px 0px 10px;
   text-align: center;
 }
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 54px;
   color: #fff;
+}
+
+header nav {
+  display: flex;
+  justify-content: center;
+}
+
+header nav ul {
+  display: flex;
 }
 
 header nav ul li {
@@ -75,7 +95,7 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-  color: #bdbdbd;
+  color: #faf8f8;
   text-decoration: none;
 }
 
@@ -84,6 +104,11 @@ form {
   border: 2px solid #ff385c;
   padding: 10px;
 }
+
+/* form div {
+  display: flex;
+  justify-content: center;
+} */
 
 form label {
   font-weight: bold;
@@ -104,6 +129,7 @@ form button {
   width: 100%;
 }
 
+
 /* -------  Footer ------- */
 
 footer {
@@ -117,3 +143,54 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+
+@media (min-width: 480px) {
+  body {
+    display: grid;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+  }
+
+  header nav ul {
+    align-items: center;
+  }
+
+  header nav ul li a {
+    color: white;
+    justify-content: space-between;
+    text-decoration: none;
+    padding: 0 20px 0 0;
+  }
+
+  form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  form div {
+    flex-direction: column;
+  }
+
+  form button {
+    flex: 1;
+  }
+
+  form select,
+  form input {
+    margin-bottom: 0px;
+  }
+
+  .group {
+    flex-direction: row;
+    align-items: center;
+  }
+
+  /* #about {
+    margin: auto;
+  } */
+}
