--- a/style.css
+++ b/style.css
@@ -132,7 +132,6 @@ footer p {
   header {
     display: flex;
     justify-content: space-between;
-    padding: 0 10%;
   }
 
   .logo {
@@ -147,7 +146,8 @@ footer p {
 
   .group {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
   }
 
   form {
@@ -158,6 +158,7 @@ footer p {
 
   form div {
     flex-direction: column;
+    justify-content: space-evenly;
   }
 
   form button {
@@ -168,4 +169,9 @@ footer p {
   form input {
     margin-bottom: 0px;
   }
+
+  main img {
+    width: 100%;
+  }
+
 }
