--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header {
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 36px;
   color: #fff;
 }
 
@@ -98,7 +98,7 @@ form label {
 
 form div {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 form select,
@@ -114,6 +114,7 @@ form button {
   font-size: 24px;
   padding: 15px;
   width: 100%;
+  margin: -10px;
 }
 
 /* -------  Footer ------- */
@@ -128,7 +129,7 @@ footer p {
 }
 
 /* -------  Media Query ------- */
-@media all and (min-width: 480px) {
+@media all and (min-width: 900px) {
   header {
     display: flex;
     justify-content: space-between;
@@ -137,7 +138,7 @@ footer p {
   .logo {
     margin: 14px 0 14px 20px;
     padding-top: 0;
-    font-size: 42px;
+    font-size: 52px;
   }
 
   header nav ul {
